--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-<title>Online HTML Editor</title>
-<head>
-</head>
 <body>
 <h1>Hello World</h1>
-<div>this is a test</div>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
