--- a/index.html
+++ b/index.html
@@ -1,7 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>我的個人主頁</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f0f0f0;
+        margin: 0;
+        padding: 0;
+    }
+    header {
+        background-color: #333;
+        color: white;
+        text-align: center;
+        padding: 10px 0;
+    }
+    main {
+        padding: 20px;
+    }
+    ul {
+        list-style-type: none;
+        padding: 0;
+    }
+    li {
+        background-color: #ddd;
+        margin-bottom: 5px;
+        padding: 10px;
+    }
+</style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<header>
+    <h1>歡迎來到我的個人主頁</h1>
+</header>
+<main>
+    <p>這是我的個人主頁，你可以在這裡了解更多關於我。</p>
+    <h2>我的興趣</h2>
+    <ul>
+        <li>編程</li>
+        <li>讀書</li>
+        <li>旅行</li>
+    </ul>
+</main>
 </body>
 </html>
