--- a/index.html
+++ b/index.html
@@ -54,9 +54,6 @@
 
 <body>
 
-    <div id="toolbar">
-        <span>歡迎，admin</span>
-    </div>
 
     <form id="loginForm">
         <!-- ...existing form elements... -->
@@ -76,7 +73,7 @@
         }
     </script>
     <header>
-        <h1>歡迎來到Zack的個人主頁</h1><a href="login.html" id="loginButton">登录</a>
+        <h1>歡迎來到Zack的個人主頁</h1><a href="login/login.html" id="loginButton">登录</a>
 
     </header>
     <main>
