--- a/login/login.html
+++ b/login/login.html
@@ -50,6 +50,7 @@
 
         if(username === 'admin' && password === '12345678') {
             alert('登錄成功！');
+            window.location.href = '\admin\admin.html';
         } else {
             alert('用戶名或密碼錯誤！');
         }
