--- a/login/adminadmin.html
+++ b/login/adminadmin.html
@@ -74,7 +74,7 @@
         }
     </script>
     <header>
-        <h1>歡迎來到Zack的個人主頁</h1><a href="login/login.html" id="loginButton">登录</a>
+        <h1>歡迎來到Zack的個人主頁</h1><a href="login.html" id="loginButton">登录</a>
 
     </header>
     <main>
