--- a/login/adminadmin.html
+++ b/login/adminadmin.html
@@ -38,12 +38,11 @@
         #loginButton {
             display: inline-block;
             padding: 10px 20px;
-            background-color: #008CBA;
             color: white;
             text-decoration: none;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 5px;
+            font-size: 3px;
         }
 
         #loginButton:center {
@@ -55,7 +54,7 @@
 <body>
 
     <div id="toolbar">
-        <span>歡迎，admin</span>
+        <span>歡迎，admin</span><a href="login.html" id="loginButton">登出</a>
     <form id="loginForm">
         <!-- ...existing form elements... -->
     </form>
@@ -75,6 +74,7 @@
     </script>
     <header>
         <h1>歡迎來到Zack的個人主頁</h1>
+
     </header>
     <main>
         <p>這是我的個人主頁，你可以在這裡了解更多關於我。</p>
