--- a/login/adminadmin.html
+++ b/login/adminadmin.html
@@ -38,7 +38,7 @@
         #loginButton {
             display: inline-block;
             padding: 10px 20px;
-            color: white;
+            color: black;
             text-decoration: none;
             border-radius: 5px;
             cursor: pointer;
