--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>個人網頁</title>
+<title>Zack網頁</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div class="container">
-  <h1>歡迎來到我的個人網頁</h1>
+  <h1>Wellcome to the World Wide Web!</h1>
   <button id="loginButton" class="animatedButton">登錄</button>
 </div>
 
