--- a/index.html
+++ b/index.html
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Zack網頁</title>
+<title>Zack's Page</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<div class="container">
-  <h1>Wellcome to the World Wide Web!</h1>
-  <button id="loginButton" class="animatedButton">登錄</button>
-</div>
+<nav class="navbar">
+  <div class="container">
+    <ul class="nav-menu">
+      <li><a href="#achievements">學術成就</a></li>
+      <li><a href="#projects">開發過的作品</a></li>
+      <li class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">更多</a>
+        <div class="dropdown-content">
+          <a href="#contact">聯繫方式</a>
+          <a href="login/login.html">登入</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<header class="header">
+  <div class="container">
+    <h1>Wellcome to the World Wide Web!</h1>
+    <p>我是一名熱愛技術的開發者，喜歡探索最新的科技趨勢。</p>
+  </div>
+</header>
+
+<section id="achievements" class="container">
+  <h2>學術成就</h2>
+  <p>這裡將展示我的學術成就...</p>
+</section>
+
+<section id="projects" class="container">
+  <h2>開發過的作品</h2>
+  <p>這裡將展示我開發過的作品...</p>
+</section>
+
+<section id="contact" class="container">
+  <h2>聯繫方式</h2>
+  <p>這裡將展示我的聯繫方式...</p>
+</section>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="scripts.js"></script>
