--- a/login/adminadmin.html
+++ b/login/adminadmin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>我的個人主頁</title>
+<title>歡迎來到互聯網的世界！</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
         <a href="javascript:void(0)" class="dropbtn">更多</a>
         <div class="dropdown-content">
           <a href="#contact">聯繫方式</a>
-          <a href="login/login.html">登入</a>
+          <a href="login.html">登出</a>
         </div>
       </li>
     </ul>
@@ -26,19 +26,20 @@
 
 <header class="header">
   <div class="container">
-    <h1>歡迎來到我的個人主頁</h1>
-    <p>我是一名熱愛技術的開發者，喜歡探索最新的科技趨勢。</p>
+    <h1>歡迎來到Zack個人主頁</h1>
+    <p>
+首先恭喜你找到彩蛋了！	順帶一提，我是一名熱愛技術的開發者，喜歡探索最新的科技趨勢。</p>
   </div>
 </header>
 
 <section id="achievements" class="container">
   <h2>學術成就</h2>
-  <p>這裡將展示我的學術成就...</p>
+  <p>這裡將展示我的學術成就...還沒弄好</p>
 </section>
 
 <section id="projects" class="container">
   <h2>開發過的作品</h2>
-  <p>這裡將展示我開發過的作品...</p>
+  <p>這裡將展示我開發過的作品...還沒弄好</p>
 </section>
 
 <section id="contact" class="container">
@@ -50,3 +51,4 @@
 <script src="scripts.js"></script>
 </body>
 </html>
+
