--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@
             <a href="">
               <img src="images/twitter.png" alt="" />
             </a>
-            <a href="">
+            <a href="/login/login.html">
               <img src="images/linkedin.png" alt="" />
             </a>
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
               <img src="images/youtube.png" alt="" />
             </a>
           </div>
