--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                   aria-expanded="false"
                   aria-label="Toggle navigation"
                 >
+				<a href=/login/login.html>
                   <span class="navbar-toggler-icon"></span>
                 </button>
 
