--- a/index.html
+++ b/index.html
@@ -262,10 +262,19 @@
                         class="input_message"
                       />
                     </div>
-                    <div class="d-flex justify-content-center">
-                      <button type="submit" class="btn_on-hover">
-                        Biu～發送
-                      </button>
+                   <div class="d-flex justify-content-center">
+      <button type="button" class="btn_on-hover" onclick="showAlert()">
+        Biu～發送
+      </button>
+    </div>
+    <!-- ... -->
+  </div>
+</section>
+<script>
+function showAlert() {
+  alert('已經收到你的信息咯~感謝反饋！');
+}
+</script>
                     </div>
                   </form>
                 </div>
