--- a/contact.html
+++ b/contact.html
@@ -113,9 +113,18 @@
                       />
                     </div>
                     <div class="d-flex justify-content-center">
-                      <button type="submit" class="btn_on-hover">
-                        Biu～發送
-                      </button>
+      <button type="button" class="btn_on-hover" onclick="showAlert()">
+        Biu～發送
+      </button>
+    </div>
+    <!-- ... -->
+  </div>
+</section>
+<script>
+function showAlert() {
+  alert('已經收到你的信息咯~感謝反饋！');
+}
+</script>
                     </div>
                   </form>
                 </div>
