--- a/contact.html
+++ b/contact.html
@@ -103,8 +103,8 @@
                       <input type="text" placeholder="電話：" />
                     </div>
                     <div>
-                      <input type="email" placeholder="郵箱：" />
-                    </div>
+                      <input type="email" placeholder="郵箱：" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="請輸入一個有效的電子郵件地址。"/>
+
                     <div>
                       <input
                         type="text"
